[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simplepbi"
version = "1.0.8"
description = "Simplify usage of Power Bi Rest API"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Ignacio Barrau", email = "igna_barrau@hotmail.com"}
]
keywords = [
    "Power BI Rest API", "Power BI", "Power Bi API", "PBI",
    "LaDataWeb", "Azure", "Data", "Python", "Fabric", "Microsoft Fabric", "Fabric Rest API", "Fabric API"
]
dependencies = [
    "requests",
    "pandas",
	"msal",
    "requests-toolbelt"
]

# Classifiers as per your setup.py
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

[project.urls]
Documentation = "https://docs.microsoft.com/en-us/rest/api/power-bi/"
SayThanks = "https://www.ladataweb.com.ar/contacto.html"
Source = "https://github.com/ladataweb/SimplePBI"
Tracker = "https://github.com/ladataweb/SimplePBI/issues"

# This section ensures the use of find_packages() in the build process
[tool.setuptools]
packages = {find = {}}
